--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 10
+<h2 class="ui orange header m-inline-block m-text-thin"> 40
 	</h2>
 </div>
 </div>
@@ -48,6 +48,396 @@ var _hmt = _hmt || [];
 <div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.330 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.338 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.575 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.616 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.622 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.643 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.790 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.997 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.002 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.004 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.014 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.021 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.042 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.047 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.058 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.063 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.067 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.138 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">120.699 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.523 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.524 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.538 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.562 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.687 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.694 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.697 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.702 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">61.194 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">61.225 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header"></h3>
+<a href="http://www.sci-hub." target="_blank">
+<p class="m-text">sci-hub.</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">61.549 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
 <h3 class="ui header">gq</h3>
 <a href="http://www.sci-hub.gq" target="_blank">
 <p class="m-text">sci-hub.gq</p>
@@ -55,59 +445,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.584 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">ga</h3>
-<a href="http://www.sci-hub.ga" target="_blank">
-<p class="m-text">sci-hub.ga</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.611 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">nz</h3>
-<a href="http://www.sci-hub.nz" target="_blank">
-<p class="m-text">sci-hub.nz</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.715 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">nu</h3>
-<a href="http://www.sci-hub.nu" target="_blank">
-<p class="m-text">sci-hub.nu</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.948 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">tv</h3>
-<a href="http://www.sci-hub.tv" target="_blank">
-<p class="m-text">sci-hub.tv</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.008 s</p>
+<p class="m-text">0.578 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -120,46 +458,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.017 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">tw</h3>
-<a href="http://www.sci-hub.tw" target="_blank">
-<p class="m-text">sci-hub.tw</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.021 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">cn</h3>
-<a href="http://www.sci-hub.cn" target="_blank">
-<p class="m-text">sci-hub.cn</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.122 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">is</h3>
-<a href="http://www.sci-hub.is" target="_blank">
-<p class="m-text">sci-hub.is</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.213 s</p>
+<p class="m-text">0.581 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -172,7 +471,98 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.515 s</p>
+<p class="m-text">0.582 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">ga</h3>
+<a href="http://www.sci-hub.ga" target="_blank">
+<p class="m-text">sci-hub.ga</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">0.608 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nz</h3>
+<a href="http://www.sci-hub.nz" target="_blank">
+<p class="m-text">sci-hub.nz</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.003 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">is</h3>
+<a href="http://www.sci-hub.is" target="_blank">
+<p class="m-text">sci-hub.is</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.009 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">cn</h3>
+<a href="http://www.sci-hub.cn" target="_blank">
+<p class="m-text">sci-hub.cn</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.015 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tv</h3>
+<a href="http://www.sci-hub.tv" target="_blank">
+<p class="m-text">sci-hub.tv</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.015 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">tw</h3>
+<a href="http://www.sci-hub.tw" target="_blank">
+<p class="m-text">sci-hub.tw</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.015 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nu</h3>
+<a href="http://www.sci-hub.nu" target="_blank">
+<p class="m-text">sci-hub.nu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">60.695 s</p>
 </div>
 </div>
 </div></div>
@@ -186,7 +576,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 16:02:12 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Mar 22 16:07:11 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
