--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 9
+<h2 class="ui orange header m-inline-block m-text-thin"> 6
 	</h2>
 </div>
 </div>
@@ -49,45 +49,6 @@ var _hmt = _hmt || [];
 <div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header"></h3>
-<a href="http://sci-hub." target="_blank">
-<p class="m-text">sci-hub.</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.688 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header"></h3>
-<a href="http://sci-hub." target="_blank">
-<p class="m-text">sci-hub.</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.062 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header"></h3>
-<a href="http://sci-hub." target="_blank">
-<p class="m-text">sci-hub.</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">2.559 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
 <h3 class="ui header">ga</h3>
 <a href="http://sci-hub.ga" target="_blank">
 <p class="m-text">sci-hub.ga</p>
@@ -95,20 +56,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">0.714 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">cn</h3>
-<a href="http://sci-hub.cn" target="_blank">
-<p class="m-text">sci-hub.cn</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">1.110 s</p>
+<p class="m-text"> s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -121,33 +69,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.170 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">ws</h3>
-<a href="http://sci-hub.ws" target="_blank">
-<p class="m-text">sci-hub.ws</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">2.549 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
-<h3 class="ui header">hk</h3>
-<a href="http://sci-hub.hk" target="_blank">
-<p class="m-text">sci-hub.hk</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">2.596 s</p>
+<p class="m-text"> s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -160,7 +82,46 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">57.276 s</p>
+<p class="m-text"> s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">ws</h3>
+<a href="http://sci-hub.ws" target="_blank">
+<p class="m-text">sci-hub.ws</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text"> s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">hk</h3>
+<a href="http://sci-hub.hk" target="_blank">
+<p class="m-text">sci-hub.hk</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.043 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">cn</h3>
+<a href="http://sci-hub.cn" target="_blank">
+<p class="m-text">sci-hub.cn</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">2.546 s</p>
 </div>
 </div>
 </div></div>
@@ -174,7 +135,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Mon May 14 14:53:08 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Mon May 14 14:53:12 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
