--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var _hmt = _hmt || [];
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 2
+<h2 class="ui orange header m-inline-block m-text-thin"> 3
 	</h2>
 </div>
 </div>
@@ -49,19 +49,6 @@ var _hmt = _hmt || [];
 <div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">nu</h3>
-<a href="http://sci-hub.nu" target="_blank">
-<p class="m-text">sci-hub.nu</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.580 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
 <h3 class="ui header">tw</h3>
 <a href="http://sci-hub.tw" target="_blank">
 <p class="m-text">sci-hub.tw</p>
@@ -69,7 +56,33 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">2.150 s</p>
+<p class="m-text">1.155 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">nu</h3>
+<a href="http://sci-hub.nu" target="_blank">
+<p class="m-text">sci-hub.nu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.579 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">ooo</h3>
+<a href="http://sci-hub.ooo" target="_blank">
+<p class="m-text">sci-hub.ooo</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">3.153 s</p>
 </div>
 </div>
 </div></div>
@@ -83,7 +96,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Jun 28 19:00:05 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Jun 28 20:00:10 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
