--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ var _hmt = _hmt || [];
 <div class="ui container">
 <div class="ui stackable grid">
 <div class="fifteen wide column">
-<iframe src="https://ghbtns.com/github-btn.html?user=Wadauk&repo=scihub_ck&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+<iframe src="https://ghbtns.com/github-btn.html?user=Wadauk&repo=scihub_ck&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe><p>tips: ooo and nu is not stable. Recommend: tw</p>
 <div class="ui top attached segment">
 <div class="ui middle aligned two column grid">
 <div class="column">
@@ -49,19 +49,6 @@ var _hmt = _hmt || [];
 <div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">ooo</h3>
-<a href="http://sci-hub.ooo" target="_blank">
-<p class="m-text">sci-hub.ooo</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.636 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
 <h3 class="ui header">nu</h3>
 <a href="http://sci-hub.nu" target="_blank">
 <p class="m-text">sci-hub.nu</p>
@@ -69,7 +56,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.576 s</p>
+<p class="m-text">0.193 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -82,7 +69,20 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">2.151 s</p>
+<p class="m-text">1.154 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">ooo</h3>
+<a href="http://sci-hub.ooo" target="_blank">
+<p class="m-text">sci-hub.ooo</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.188 s</p>
 </div>
 </div>
 </div></div>
@@ -96,7 +96,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Jun 28 22:00:08 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Thu Jun 28 22:09:32 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
