--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@ var _hmt = _hmt || [];
 <div class="ui container">
 <div class="ui stackable grid">
 <div class="fifteen wide column">
-<iframe src="https://ghbtns.com/github-btn.html?user=Wadauk&repo=scihub_ck&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe><p>tips: ooo and nu is not stable. Recommend: tw</p>
+<iframe src="https://ghbtns.com/github-btn.html?user=Wadauk&repo=scihub_ck&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe><p>Tips: ooo can not load paper. nu is blocked. Recommend: tw</p>
 <div class="ui top attached segment">
 <div class="ui middle aligned two column grid">
 <div class="column">
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 3
+<h2 class="ui orange header m-inline-block m-text-thin"> 2
 	</h2>
 </div>
 </div>
@@ -49,19 +49,6 @@ var _hmt = _hmt || [];
 <div class="ui padded vertical segment m-padded-tb-big">
 <div class="ui mobile grid">
 <div class="eleven wide column">
-<h3 class="ui header">nu</h3>
-<a href="http://sci-hub.nu" target="_blank">
-<p class="m-text">sci-hub.nu</p>
-</a>
-</div>
-
-<div class="five wide column">
-<p class="m-text">0.000 s</p>
-</div>
-</div>
-</div><div class="ui padded vertical segment m-padded-tb-big">
-<div class="ui mobile grid">
-<div class="eleven wide column">
 <h3 class="ui header">tw</h3>
 <a href="http://sci-hub.tw" target="_blank">
 <p class="m-text">sci-hub.tw</p>
@@ -69,7 +56,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.151 s</p>
+<p class="m-text">1.143 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -96,7 +83,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Fri Jun 29 09:00:06 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Fri Jun 29 09:23:57 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
