--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@ var _hmt = _hmt || [];
 <div class="ui container">
 <div class="ui stackable grid">
 <div class="fifteen wide column">
-<iframe src="https://ghbtns.com/github-btn.html?user=Wadauk&repo=scihub_ck&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe><p>Tips: ooo can not load paper. nu is blocked. Recommend: tw</p>
+<iframe src="https://ghbtns.com/github-btn.html?user=Wadauk&repo=scihub_ck&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe><p>Tips: ooo can not load paper. nu is blocked. Recommend: tw and mu</p>
 <div class="ui top attached segment">
 <div class="ui middle aligned two column grid">
 <div class="column">
 <h3 class="ui teal header">Working Domains</h3>
 </div>
 <div class="right aligned column">
-<h2 class="ui orange header m-inline-block m-text-thin"> 2
+<h2 class="ui orange header m-inline-block m-text-thin"> 3
 	</h2>
 </div>
 </div>
@@ -56,7 +56,20 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">1.164 s</p>
+<p class="m-text">1.149 s</p>
+</div>
+</div>
+</div><div class="ui padded vertical segment m-padded-tb-big">
+<div class="ui mobile grid">
+<div class="eleven wide column">
+<h3 class="ui header">mu</h3>
+<a href="http://sci-hub.mu" target="_blank">
+<p class="m-text">sci-hub.mu</p>
+</a>
+</div>
+
+<div class="five wide column">
+<p class="m-text">1.266 s</p>
 </div>
 </div>
 </div><div class="ui padded vertical segment m-padded-tb-big">
@@ -69,7 +82,7 @@ var _hmt = _hmt || [];
 </div>
 
 <div class="five wide column">
-<p class="m-text">2.158 s</p>
+<p class="m-text">2.141 s</p>
 </div>
 </div>
 </div></div>
@@ -83,7 +96,7 @@ var _hmt = _hmt || [];
 
 <footer class="ui inverted vertical segment m-padded-tb-massive">
 <div class="ui center aligned container">
-<p class="m-text-thin m-text-spaced m-opacity-tiny">Wed Jul  4 10:00:07 CST 2018
+<p class="m-text-thin m-text-spaced m-opacity-tiny">Wed Jul  4 10:25:10 CST 2018
 <br>Copyright c 2017 - 2018 Scihub_ck Designed by Wadauk</p>
 </div>
 </footer>
